# kubespray

./: .gitmodules  cluster.yml  external-lb.yml  pyproject.toml
contrib/offline/: generate_list.sh
contrib/vault/roles/vault/tasks/bootstrap/: ca_trust.yml
inventory/sample/: inventory.ini
inventory/sample/group_vars/: external-lb.yml
roles/bootstrap-os/tasks/: bootstrap-fedora.yml  bootstrap-kylin.yml  main.yml
roles/container-engine/docker/files/: libprotobuf-c1-1.4.0-alt1.x86_64.rpm  runc-1.0.0-101.rc9.gitc1485a1.ky10.x86_64.rpm
roles/container-engine/docker/tasks/: main.yml  systemd.yml
roles/container-engine/docker/templates/: daemon.json.j2  docker-options.conf.j2
roles/container-engine/docker/vars/: kylin_linux_advanced_server.yml
roles/etcd/tasks/: upd_ca_trust.yml
roles/kubernetes/preinstall/tasks/: 0020-verify-settings.yml
roles/reset/tasks/: main.yml
