[tool.poetry]
name = "kubespray"
version = "2.15.1"
description = ""
authors = ["jimorsm <jimorsm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
ansible = "2.9.18"
cryptography = "2.8"
jinja2 = "2.11.3"
netaddr = "0.7.19"
pbr = "5.4.4"
jmespath = "0.9.5"
"ruamel.yaml" = "0.16.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
