[tool.poetry]
name = "kubespray"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
ansible = "3.4.0"
ansible-base = "2.10.11"
cryptography = "2.8"
jinja2 = "2.11.3"
netaddr = "0.7.19"
pbr = "5.4.4"
jmespath = "0.9.5"
"ruamel.yaml" = "0.16.10"
"ruamel.yaml.clib" = "0.2.2"
MarkupSafe = "1.1.1"

[tool.poetry.dev-dependencies]
ansible-lint = "^5.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
